Version 1.01
* The article selector was not hiding again on invalid URLs (only clearing options).
* Added some css / templating fixes proposed by @yellowled. Thanks!
* 2k11 commentform.tpl patchfile changed. Please update if you use it! 
* The internal styling of the article announcement dropdown is optional now.
* Preview comment is not loosing article promotion selection anymore.